[project]
name = "python-social-auth-examples"
requires-python = ">=3.11"
version = "2025.0"

[tool.ruff.lint]
ignore = [
  "ANN",  # TODO: missing type annotations
  "ARG001",  # TODO: Unused function argument
  "ARG005",  # TODO: Unused lambda argument
  "COM",  # CONFIG: No trailing commas
  "D",  # TODO: missing documentation
  "D203",  # CONFIG: incompatible with D211
  "D212",  # CONFIG: incompatible with D213
  "E501",  # WONTFIX: we accept long strings (rest is formatted by ruff)
  "EM101",  # TODO: Exception must not use a string literal
  "FBT002",  # TODO: Boolean default positional argument in function definition
  "FBT003",  # TODO: Boolean positional value in function call
  "N",  # TODO: wrong naming conventions
  "PLR2004",  # TODO: Magic value used in comparison
  "PTH",  # TODO: not using pathlib
  "S104",  # CONFIG: Possible binding to all interfaces
  "S105",  # CONFIG: Possible hardcoded password assigned
  "S106",  # CONFIG: Possible hardcoded password assigned
  "S603",  # CONFIG: subprocess is being used
  "S607",  # CONFIG: subprocess executes system tools
  "SLF001",  # TODO: Private member accessed
  "T201",  # CONFIG: print is used
  "TRY003",  # TODO: Avoid specifying long messages outside the exception class
  'ISC001'  # CONFIG: formatter
]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"example-*/**settings.py" = ["ERA001"]
"example-*/manage.py" = ["INP001"]
"example-*/setup.py" = ["INP001"]
"example-django/app/migrations/*.py" = ["RUF012"]

[tool.tomlsort]
ignore_case = true
sort_inline_arrays = true
sort_inline_tables = true
sort_table_keys = true
spaces_before_inline_comment = 2
